--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -140,6 +140,12 @@
     display: none;
   }
 }
+.svg-icon {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  vertical-align: middle;
+}
 
 
 
