--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -1,3 +1,4 @@
+/* Navbar.css */
 /* Navbar整体样式 */
 .nav {
   position: fixed;
@@ -157,14 +158,3 @@
   height: 56px;
   vertical-align: middle;
 }
-
-
-
-
-
-
-
-
-
-
-
